# raster_cpp

OpenGLRaster/: CMakeLists.txt  README.md
OpenGLRaster/libs/glad/include/glad/: glad.h
OpenGLRaster/libs/glad/src/: glad.c
SoftRaster/: CMakeLists.txt  FrameWindow.cpp  FrameWindow.h  main.cpp
SoftRaster/devices/: windows_forms.cpp  windows_forms.h
SoftRaster/math/: Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  mat2.cpp  mat2.h  mat4.cpp  vec2.cpp  vec3.cpp  vec3.h  vec4.cpp
SoftRaster/matrix/: mat2.cpp  mat2.h  mat3.cpp  mat3.h  mat4.cpp  mat4.h  matrix.cpp  matrix.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
SoftRaster/pipeline/: camera_target.cpp  camera_target.h
SoftRaster/src/: main.cpp
SoftRaster/src/devices/: time.h  windows_forms.cpp  windows_forms.h
SoftRaster/src/engine/: camera.h
SoftRaster/src/engine/buffer/: camera_target.cpp  camera_target.h  frame_buffer.cpp  frame_buffer.h  z_buffer.cpp  z_buffer.h
SoftRaster/src/engine/comp/: camera.cpp  camera.h  mesh.cpp  mesh.h
SoftRaster/src/engine/pipeline/: pipeline.cpp  pipeline.h  vertex_ctl.cpp  vertex_ctl.h
SoftRaster/src/engine/shader/: shader_lab.h  shader_simple.h  shader_unlit.h  simple_shader.h
SoftRaster/src/engine/struct/: a2v.cpp  a2v.h  v2f.h
SoftRaster/src/engine/util/: barycentric_util.h  math_util.h  mesh_util.h
SoftRaster/src/matrix/: mat2.cpp  mat2.h  mat3.cpp  mat3.h  mat4.cpp  mat4.h  matrix.cpp  matrix.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
SoftRaster/src/tex/: texture.cpp  texture.h
SoftRaster/tex/: texture.cpp
